.k8s/hasura/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: planetexpress-hasura
    hasuraService: custom
  name: planetexpress-hasura
spec:
  replicas: 2
  selector:
    matchLabels:
      app: planetexpress-hasura
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: planetexpress-hasura
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: hasura
          image: __CI_REGISTRY_IMAGE__/hasura:__CI_COMMIT_SHA__
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
