.k8s/hasura/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hasura-planetexpress-__CI_ENVIRONMENT_SLUG__
  labels:
    app: hasura-planetexpress
    ref: hasura-__CI_ENVIRONMENT_SLUG__
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: planetexpress-hasura
    ref: __CI_ENVIRONMENT_SLUG__-hasura
