.k8s/hasura/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: planetexpress-hasura
  labels:
    app: planetexpress-hasura
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - hasura-__CI_ENVIRONMENT_SLUG__.planetexpress.dev
    secretName: hasura-__CI_ENVIRONMENT_SLUG__.planetexpress.dev
  rules:
    - host: hasura-__CI_ENVIRONMENT_SLUG__.planetexpress.dev
      http:
        paths:
          - backend:
              serviceName: planetexpress-hasura
              servicePort: 80
